alternative to readAllBytes() for java version < 9